--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,30 +3,8 @@
     <h3>{{ title }}</h3>
   </div>
   <hr />
-  <form class="row g-3">
-    <div class="col-auto mb-4">
-      <label for="nombre" class="visually-hidden ">Nombre</label>
-      <input type="text" name="nombre" id="nombre" placeholder="Nombre" class="form-control" [(ngModel)]="nameInput">
-    </div>
-    <div class="col-auto mb-4">
-      <label for="apellido" class="visually-hidden">Apellido</label>
-      <input type="text" name="apellido" id="apellido" placeholder="Apellido" class="form-control"
-        [(ngModel)]="lastnameInput">
-    </div>
-    <div class="col">
-      <button type="submit" class="btn btn-primary" (click)="addPeople()">
-        Agregar
-      </button>
-    </div>
-  </form>
-</div>
-<div class="container">
+  <app-formulario (createdPeople)="addedPeople($event)"></app-formulario>
   <hr />
-  <div class="row">
-    <div class="col">
-      <div *ngFor="let persona of personas; let i = index">
-        {{ i + 1 }} - {{ persona.name }} {{ persona.lastname }}
-      </div>
-    </div>
-  </div>
+  <app-persona *ngFor="let personaElement of personas; let i = index" [persona]="personaElement" [index]="i">
+  </app-persona>
 </div>
