--- a/src/app/persona/persona.component.html
+++ b/src/app/persona/persona.component.html
@@ -3,6 +3,9 @@
     <div class="col">
       <div>
         {{ index + 1 }} - {{ persona.name }} {{ persona.lastname }}
+        <button type="submit" class="btn btn-info" (click)="emitGreetings()">
+          Editar
+        </button>
       </div>
     </div>
   </div>
