--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,12 @@
-<div class="container">
-  <div class="col">
-    <h3>{{ title }}</h3>
-  </div>
-  <hr />
-  <app-formulario></app-formulario>
-  <hr />
+<div class="box" id="heading">
+  <h1>{{ title }}</h1>
+</div>
+
+<div class="box">
   <app-persona *ngFor="let personaElement of personas; let i = index" [persona]="personaElement" [index]="i">
   </app-persona>
+</div>
+
+<div class="box">
+  <app-formulario></app-formulario>
 </div>
