--- a/src/app/formulario/formulario.component.html
+++ b/src/app/formulario/formulario.component.html
@@ -1,15 +1,8 @@
-<form class="row g-3">
-  <div class="col-auto mb-4">
-    <label for="nombre" class="visually-hidden ">Nombre</label>
-    <input type="text" name="nombre" id="nombre" placeholder="Nombre" class="form-control" #nameInput>
-  </div>
-  <div class="col-auto mb-4">
-    <label for="apellido" class="visually-hidden">Apellido</label>
-    <input type="text" name="apellido" id="apellido" placeholder="Apellido" class="form-control" #lastnameInput>
-  </div>
-  <div class="col">
-    <button type="submit" class="btn btn-primary" (click)="addPeople()">
-      Agregar
-    </button>
-  </div>
+<form class="item">
+
+  <input type="text" name="nombre" id="nombre" placeholder="Nombre" [(ngModel)]="nameInput">
+
+  <input type="text" name="apellido" id="apellido" placeholder="Apellido" [(ngModel)]="lastnameInput">
+
+  <button type="submit" (click)="addPeople()">+</button>
 </form>
