--- a/src/app/persona/persona.component.html
+++ b/src/app/persona/persona.component.html
@@ -1,12 +1,4 @@
-<div class="container">
-  <div class="row">
-    <div class="col">
-      <div>
-        {{ index + 1 }} - {{ persona.name }} {{ persona.lastname }}
-        <button type="submit" class="btn btn-info" (click)="emitGreetings()">
-          Editar
-        </button>
-      </div>
-    </div>
-  </div>
+<div class="item">
+  <input type="checkbox" (click)="emitGreetings()" />
+  <p>{{ index + 1 }} - {{ persona.name }} {{ persona.lastname }}</p>
 </div>
